# Virketrang

./: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .npmrc  .prettierignore  .prettierrc  .prettierrc.js  LICENSE  Makefile  README.md  TODO.md  angular.json  docker-compose.yaml  docker-compose.yml  docker.dev.yaml  docker.prod.yaml  lerna.json  nest-cli.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.workspace.js  test.js  tsconfig.angular.json  tsconfig.base.json  tsconfig.json  tsconfig.webpack.json  turbo.json  unimport.workspace.ts  uno.config.ts  vite.workspace.ts  vitest.workspace.ts
.parcel-cache/: 0269ddf931bb68e4  069df73f23ea243b  0cdcaff6877c78b7  0da936b2a80b3840  0fe09f78a2665474  1dadd69b5fb32ce0  234fa856998ca704  3572bdcc6b58eb4f  41aea969b8bdff6d.txt  4a26d2700e4f0893  52eda93ec86eb5ec  666a8351c0a04ad5  68e0c0e21383aa4f  6b7f5928ee478a59.txt  6d101331bc8674e0.txt  77408f0dc3350d32.txt  79484fb75c89ff3e  80132b139a9f7dec  8a886a364f3acab7  9e2609c1530514f2.txt  9f2a8af5857bdd8c  a074f7b84e9fca95  a8f7d51b90335795  ab590390e3108107  b0c7e616aa5ffd9d  bdf8dd56d1f714f9.txt  be1d64483c357f72  ca5daadfc8fe8bb2  cc354b56a642e8f3.txt  cd65fc0a915cf1c8.txt  d1a394c67e8da7a5.txt  d37ccde034b55aa1  data.mdb  e0ef2d49687f2444  ee3516d6dd2c43f2  f0298a0fed326398  f1662448b2991f83.txt  f352a4ebd8265da9  f7ba30cda2047758  lock.mdb
apps/nexus/client/desktop/src-tauri/: Cargo.toml
apps/nexus/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/nexus/client/src-tauri/src/: main.rs
config/: i18n.ts
dashboard/: .eslintrc  (+8 more)
(+2039 files in other folders)
