[package]
name = "nexus"
version = "0.0.0"
description = "ERP-system for small and mid-sized companies"
authors = ["Sigfred Frey Nørgaard Knudsen"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
